--- a/Photos.html
+++ b/Photos.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,12 +18,18 @@
 <span>|</span>
 <a href="Contact-us.html">Contact Us</a>
 
+
+
     <h1 class="photo-container">Photos of CoD Warzone</h1>
     <br>
     <br>
     <br>
     <br>
     <br>
+
+    <h4>All Rights Reserved to Call Of Duty&BattleNet</h4>
+
+    
 
     <img class="one-container" src="assets/Photo1.jpg">
     <br>
