--- a/more.html
+++ b/more.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>More</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -34,6 +35,7 @@
 <br>
 
 <iframe width="500" height="500" src="https://eu.shop.battle.net/en-us/product/call-of-duty-modern-warfare"></iframe>
+<h4>All Rights Reserved to Call Of Duty&BattleNet</h4>
 
 <hr>
 
